--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,8 @@
   }
 }
 
+
+
 html,
 body {
   max-width: 100vw;
@@ -18,10 +20,19 @@ body {
 
 body {
   color: var(--foreground);
-  background: var(--background);
+  background: 'gray';
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+
+
+/*Agregado de font: Cooper Hewitt*/
+@import url('https://fonts.googleapis.com/css2?family=Cooper+Hewitt:wght@400;600&display=swap');
+
+body {
+  font-family: 'Cooper Hewitt', sans-serif;
 }
 
 * {
